--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="forecast_location_hour_temperature">%d°</string>
     <string name="forecast_location_hour_wind">%1$d %2$s</string>
     <string name="forecast_location_hour_time">%1$tH:%1$tM</string>
+    <string name="forecast_location_hourly_title">Hourly forecast</string>
+    <string name="forecast_location_day_temperature">%1$d°/%2$d°</string>
+    <string name="forecast_location_day_date">%1$ta %1$tb %1$td</string>
+    <string name="forecast_location_day_wind">%1$d %2$s</string>
+    <string name="forecast_location_daily_title">Daily forecast</string>
 
     <!-- PrecipitationUnit -->
     <string name="precipitation_unit_mm">mm</string>
