--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="forecast_2_top_bar_headline">Search locations</string>
     <string name="forecast_2_top_bar_action_settings">Settings</string>
     <string name="forecast_2_top_bar_action_info">Info</string>
+    <string name="forecast_2_content_empty_rationale">There are no locations</string>
 
     <!-- ForecastScreen -->
     <string name="forecast_drawer_title">Weather</string>
